--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.4.5",
     "element-ui": "^2.13.2",
     "js-cookie": "2.2.0",
+    "markdown-it": "^14.1.0",
+    "marked": "^12.0.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
